# modelload-test

./: babel.config.js  metro.config.js  package-lock.json  package.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/test/: MainApplication.kt
android/scripts/: convertModel.py
src/: App.tsx
src/features/Camera/: CameraScreen.js  ObjectDetection.js
src/navigation/: AppNavigator.js  routes.js
src/screens/: HomeScreen.js
src/utils/: PythonExample.js
